overflow and padding fixes (#9)
* Scriptless snackbar is 1.5s now

* refactor snackbar -> scriptlesssnackbar

* noscript fix

* overflow and padding fixes

--- a/src/App.scss
+++ b/src/App.scss
@@ -11,7 +11,6 @@
   & header, & main, & footer {
     background-color: rgba(0, 0, 0, 0.65);
     box-shadow: rgb(38, 57, 77) 0px 20px 30px -10px;
-    margin-bottom: 50px;
     backdrop-filter: blur(25px);
   }
   & header {
@@ -20,7 +19,9 @@
     align-items: center;
     justify-content: space-between;
     max-width: 100vw;
+    margin-bottom: 3em;
     .left {
+      overflow-x: hidden;
       & a {
         display: flex;
         align-items: center;
@@ -33,6 +34,7 @@
         -webkit-background-clip: text;
         -webkit-text-fill-color: transparent;
         color: transparent;
+        white-space: nowrap;
         &:link {
           color: inherit;
         }
@@ -51,9 +53,15 @@
       }
     }
     .right {
+      flex: 1 1;
       display: flex;
-      align-items: center;
-      flex-wrap: wrap;
+      max-width: 100%;
+      &::before {
+        flex: 1 1 1px;
+        content: '';
+        display: block;
+        height: 1px;
+      }
       & a {
         display: flex;
         align-items: center;
@@ -120,13 +128,13 @@
   & main {
     flex-grow: 1;
 
-    width: 100%;
+    width: calc(100% - 6em);
     max-width: 60em;
     margin: 0 auto;
     border-radius: 1em;
     padding: 1em 2em;
   }
   & footer {
-
+    margin-top: 3em;
   }
 }
